--- a/utils/makefile
+++ b/utils/makefile
@@ -1,16 +1,19 @@
 CXX = g++
 CXXFLAGS = -Wall -Wextra -pedantic -Wshadow -O2
 LD = g++
-LDFLAGS = 
+LDFLAGS =
 LDLIBS = 
 
 default: parseddu.exe
 
-parseddu.exe: parseddu.o
-	$(LD) $(LDFLAGS) -o parseddu.exe parseddu.o $(LDLIBS)
+parseddu.exe: parseddu.o data_packet.o
+	$(LD) $(LDFLAGS) -o parseddu.exe parseddu.o data_packet.o $(LDLIBS)
 
-parseddu.o: parseddu.cpp
+parseddu.o: parseddu.hpp parseddu.cpp data_packet.hpp
 	$(CXX) $(CXXFLAGS) -c parseddu.cpp
+
+data_packet.o: data_packet.hpp data_packet.cpp
+	$(CXX) $(CXXFLAGS) -c data_packet.cpp
 
 .PHONY: clean
 
