--- a/utils/makefile
+++ b/utils/makefile
@@ -1,4 +1,4 @@
-EXEDIR := scripts
+EXEDIR := run
 OBJDIR := bin
 SRCDIR := src
 INCDIR := inc
@@ -6,14 +6,20 @@ MAKEDIR := bin
 LIBFILE := $(OBJDIR)/libStatObj.a
 
 CXX := $(shell root-config --cxx)
-EXTRA_WARNINGS := -Wcast-align -Wcast-qual -Wdisabled-optimization -Wformat=2 -Wformat-nonliteral -Wformat-security -Wformat-y2k -Winit-self -Winvalid-pch -Wlong-long -Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn -Wpacked -Wpointer-arith -Wredundant-decls -Wstack-protector -Wswitch-default -Wswitch-enum -Wundef -Wunused -Wvariadic-macros -Wwrite-strings -Wabi -Wctor-dtor-privacy -Wnon-virtual-dtor #-Wstrict-null-sentinel -Wsign-promo -Wsign-compare #-Wunsafe-loop-optimizations -Wfloat-equal -Wsign-conversion -Wunreachable-code
-CXXFLAGS := -isystem $(shell root-config --incdir) -Wall -Wextra -pedantic -Werror -Wshadow -Woverloaded-virtual -Wold-style-cast $(EXTRA_WARNINGS) $(shell root-config --cflags) -O2 -I $(INCDIR)
+EXTRA_WARNINGS := -Wcast-align -Wcast-qual -Wdisabled-optimization -Wformat=2 -Wformat-nonliteral -Wformat-security -Wformat-y2k -Winit-self -Winvalid-pch -Wlong-long -Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn -Wpacked -Wpointer-arith -Wredundant-decls -Wstack-protector -Wswitch-default -Wswitch-enum -Wundef -Wunused -Wvariadic-macros -Wwrite-strings -Wabi -Wctor-dtor-privacy -Wnon-virtual-dtor -Wsign-promo -Wsign-compare #-Wunsafe-loop-optimizations -Wfloat-equal -Wsign-conversion -Wunreachable-code
+CXXFLAGS := -isystem $(shell root-config --incdir) -Wall -Wextra -pedantic -Werror -Wshadow -Woverloaded-virtual -Wold-style-cast $(EXTRA_WARNINGS) $(shell root-config --cflags) -O2 -I $(INCDIR) -std=c++14
 LD := $(shell root-config --ld)
 LDFLAGS := $(shell root-config --ldflags)
-LDLIBS := $(shell root-config --libs) -lMinuit
+LDLIBS := $(shell root-config --libs) -lMinuit -lRooStats -lRooFitCore -lRooFit -lTreePlayer 
 
-EXECUTABLES := $(addsuffix .exe, $(notdir $(basename $(wildcard $(SRCDIR)/*.cxx))))
+EXECUTABLES := $(addprefix $(EXEDIR)/, $(addsuffix .exe, $(notdir $(basename $(wildcard $(SRCDIR)/*.cxx))))) 
 OBJECTS := $(addprefix $(OBJDIR)/, $(addsuffix .o, $(notdir $(basename $(wildcard $(SRCDIR)/*.cpp)))))
+
+FIND_DEPS = $(CXX) $(CXXFLAGS) -MM -MG -MF $@ $<
+EXPAND_DEPS = perl -pi -e 's|$*.o|$(OBJDIR)/$*.o $(MAKEDIR)/$*.d|g' $@
+GET_DEPS = $(FIND_DEPS) && $(EXPAND_DEPS)
+COMPILE = $(CXX) $(CXXFLAGS) -o $@ -c $<
+LINK = $(LD) $(LDFLAGS) -o $@ $^ $(LDLIBS)
 
 vpath %.cpp $(SRCDIR)
 vpath %.cxx $(SRCDIR)
@@ -30,27 +36,21 @@ all: $(EXECUTABLES)
 $(LIBFILE): $(OBJECTS)
 
 $(MAKEDIR)/%.d: $(SRCDIR)/%.cpp
-	$(CXX) $(CXXFLAGS) -MM -MG -MF $@ $< 
-	sed -i'' 's#$*.o#$(OBJDIR)/$*.o $(MAKEDIR)/$*.d#g' $@
+	$(GET_DEPS)
 
 $(MAKEDIR)/%.d: $(SRCDIR)/%.cxx
-	$(CXX) $(CXXFLAGS) -MM -MG -MF $@ $< 
-	sed -i'' 's#$*.o#$(OBJDIR)/$*.o $(MAKEDIR)/$*.d#g' $@
+	$(GET_DEPS)
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.cpp
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
+	$(COMPILE)
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.cxx
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
+	$(COMPILE)
 
 $(OBJDIR)/%.a:
 	ar rcsv $@ $^
 
-%.exe: $(OBJDIR)/%.o $(LIBFILE)
-	$(LD) $(LDFLAGS) -o $(EXEDIR)/$@ $^ $(LDLIBS)
+$(EXEDIR)/%.exe: $(OBJDIR)/%.o $(LIBFILE)
+	$(LINK)
 
-.PHONY: clean
-
-clean:
-	-rm -rf $(EXEDIR)/*.exe $(OBJDIR)/*.o $(OBJDIR)/*.a $(MAKEDIR)/*.d *.exe *.out
-	./scripts/remove_backups.sh
+.DELETE_ON_ERROR:
